--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   path_provider: ^2.1.2
+  shared_preferences: ^2.0.6
 
 dev_dependencies:
   flutter_test:
