--- a/web/manifest.json
+++ b/web/manifest.json
@@ -3,8 +3,8 @@
   "short_name": "Cutting Fabric",
   "start_url": ".",
   "display": "standalone",
-  "background_color": "#hexcode",
-  "theme_color": "#hexcode",
+  "background_color": "#fffff",
+  "theme_color": "#ffae42",
   "description": "A new Flutter project.",
   "orientation": "portrait-primary",
   "prefer_related_applications": false,
