--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = Cutting Fabric
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.cuttingFabric
+PRODUCT_BUNDLE_IDENTIFIER = com.coyotte508.cuttingFabric
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2024 com.example. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2024 com.coyotte508. All rights reserved.
