--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -89,11 +89,11 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "com.example" "\0"
+            VALUE "CompanyName", "com.coyotte508" "\0"
             VALUE "FileDescription", "cutting_fabric" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
             VALUE "InternalName", "cutting_fabric" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2024 com.example. All rights reserved." "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2024 com.coyotte508. All rights reserved." "\0"
             VALUE "OriginalFilename", "cutting_fabric.exe" "\0"
             VALUE "ProductName", "Cutting Fabric" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
