✨ Share cutting plan image

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -28,6 +28,18 @@ if (keystorePropertiesFile.exists()) {
     keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 }
 
+// Error when building for android otherwise
+// dependencies {
+//     constraints {
+//         implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.9.10") {
+//             because("kotlin-stdlib-jdk7 is now a part of kotlin-stdlib")
+//         }
+//         implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.9.10") {
+//             because("kotlin-stdlib-jdk8 is now a part of kotlin-stdlib")
+//         }
+//     }
+// }
+
 android {
     namespace "com.coyotte508.cutting_fabric"
     compileSdk flutter.compileSdkVersion
